--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -73,10 +73,9 @@ services:
       - ${FLORACCESS_SERVER_PORT:-}:80
     volumes:
       - ./FlorAccess_server:/app/
-      - ./FlorAccess_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /app/src/swagger/json:rw,uid=1800,gid=1800
+      - /tmp:exec,nosuid,nodev
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
       interval: 10s
@@ -99,10 +98,9 @@ services:
       - ${ECONORIS_SERVER_PORT:-}:80
     volumes:
       - ./Econoris_server:/app/
-      - ./Econoris_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /app/src/swagger/json:rw,uid=1800,gid=1800
+      - /tmp:exec,nosuid,nodev
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
       interval: 10s
@@ -125,10 +123,9 @@ services:
       - ${FLOLLYLIST_SERVER_PORT:-}:80
     volumes:
       - ./FlollyList_server:/app/
-      - ./FlollyList_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /app/src/swagger/json:rw,uid=1800,gid=1800
+      - /tmp:exec,nosuid,nodev
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flollylist-server:80/ || exit 1"]
       interval: 10s
@@ -142,6 +139,7 @@ services:
   # Econoris App Web #
   econoris-app-web:
     image: nginx:stable-alpine
+    working_dir: /app
     env_file:
       - ./config/.env.econoris_app
     networks:
@@ -158,13 +156,13 @@ services:
       - ./econoris_app/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./config/.env.econoris_app:/usr/share/nginx/html/assets/.env:ro
     command: ["nginx", "-g", "daemon off;"]
-    working_dir: /app
     environment:
       - FLUTTER_ENV=dev
 
   # FlollyList App Web #
   flollylist-app-web:
     image: nginx:stable-alpine
+    working_dir: /app
     env_file:
       - ./config/.env.flollylist_app
     networks:
@@ -181,10 +179,10 @@ services:
       - ./flollylist_app/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./config/.env.flollylist_app:/usr/share/nginx/html/assets/.env:ro
     command: ["nginx", "-g", "daemon off;"]
-    working_dir: /app
     environment:
       - FLUTTER_ENV=dev
 
+  # Flower garden app #
   flower-garden-app:
     image: node:24-alpine
     working_dir: /app
@@ -192,9 +190,8 @@ services:
     networks:
       - flower-garden-net
     volumes:
-      - ./:/app/
-      - ./node_modules:/app/node_modules
-    command: sh -c "cd /app && npm run dev"
+      - ./Flower_garden_app:/app/
+    command: ["npm", "run", "dev"]
     ports:
       - ${FLOWER_GARDEN_APP_PORT:-}:80
     user: "1800:1800"
