--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
   # FlorAccess Server #
   floraccess-server:
     image: florobart/floraccess-server:latest
+    working_dir: /app
     restart: always
     env_file:
       - ./config/.env.floraccess_server
@@ -84,7 +85,6 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
-      - /app/dist/swagger/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
       interval: 10s
@@ -94,6 +94,7 @@ services:
   # Econoris Server #
   econoris-server:
     image: florobart/econoris-server:latest
+    working_dir: /app
     restart: always
     env_file:
       - ./config/.env.econoris_server
@@ -115,7 +116,6 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
-      - /app/dist/swagger/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
       interval: 10s
@@ -125,6 +125,7 @@ services:
   # FlollyList Server #
   flollylist-server:
     image: florobart/flollylist-server:latest
+    working_dir: /app
     restart: always
     env_file:
       - ./config/.env.flollylist_server
@@ -146,7 +147,6 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
-      - /app/dist/swagger/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flollylist-server:80/ || exit 1"]
       interval: 10s
@@ -248,8 +248,8 @@ services:
   # Flower garden app #
   flower-garden-app:
     image: florobart/flower-garden-app:latest
-    restart: always
     working_dir: /app
+    restart: always
     env_file:
       - ./config/.env.flower_garden_app
     networks:
@@ -266,7 +266,7 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
-      - /app/${DIR_CACHE_PATH}/:rw,uid=1800,gid=1800
+      - /app/${FLOWER_GARDEN_DIR_CACHE_PATH}/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flower-garden-app:80/ || exit 1"]
       interval: 10s
